JumpScript/tests/baselines/reference/undefinedTypeAssignment2.errors.txt
tests/cases/compiler/undefinedTypeAssignment2.jump(1,5): error TS2397: Declaration name conflicts with built-in global identifier 'undefined'.


==== tests/cases/compiler/undefinedTypeAssignment2.jump (1 errors) ====
    var undefined = void 0;
        ~~~~~~~~~
!!! error TS2397: Declaration name conflicts with built-in global identifier 'undefined'.
    